--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
   <body>
     <header>
       <nav>
-        <a href="#">
+        <a href="./index.html">
           <img src="./images/logo.svg" alt="логотип" />
         </a>
         <ul>
-          <li><a href="#">Франшизи</a></li>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Шеф кухарі</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#traditions-section">Наші традиції</a></li>
+          <li><a href="#cookers-section">Шеф кухарі</a></li>
+          <li><a href="#formats-section">Формати</a></li>
+          <li><a href="#contakt-section">Контакти</a></li>
         </ul>
       </nav>
       <button type="button">Замовити дзвінок</button>
@@ -26,7 +25,7 @@
       <section>
         <h1>Сучасна пекарня</h1>
       </section>
-      <section>
+      <section id="traditions-section">
         <ul>
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
@@ -44,7 +43,7 @@
         </p>
         <img src="./images/baker-man.jpg" alt="пекарь" />
       </section>
-      <section>
+      <section id="cookers-section">
         <h2>Найкращі шеф кухарі</h2>
         <ul>
           <li>
@@ -68,7 +67,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="formats-section">
         <h2>Формати</h2>
         <ul>
           <li>
@@ -88,8 +87,18 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="contakt-section">
         <h2>Приєднуйся до мережі пекарень</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2spe!4v1764575197993!5m2!1sru!2spe"
+          width="603"
+          height="595"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        >
+        </iframe>
       </section>
     </main>
     <footer>
@@ -128,7 +137,7 @@
           </li>
         </ul>
         <a href="#" target="_blank">Політика конфіденційності</a>
-        <p><© 2023 Дані захищені/p></p>
+        <p>© 2023 Дані захищені/p></p>
       </address>
     </footer>
   </body>
