--- a/index.html
+++ b/index.html
@@ -58,18 +58,25 @@
       </section>
       <section class="traditions-section section" id="traditions-section">
         <div class="container">
-          <h2 class="traditions-title section-title">Новий формат традицій</h2>
-          <p class="traditions-text">
-            <span class="brand uppercase">shop bakery </span>— це пекарня, яка
-            взяла все найкраще, і зберегла смак традиційної випічки та
-            натуральність інгредієнтів.
-          </p>
-          <p class="traditions-text">
-            Ми працюємо як найвідоміші мережі —
-            <span class="brand"> 5 хвилин і замовлення готове </span>. А ще у
-            наших пекарень стильний дизайн та висока якість обслуговування!
-          </p>
-          <img src="./images/baker-man.jpg" alt="пекарь" />
+          <div class="traditions-container">
+            <div class="traditions-content">
+              <h2 class="traditions-title section-title">
+                Новий формат традицій
+              </h2>
+              <p class="traditions-text">
+                <span class="brand uppercase">shop bakery </span>— це пекарня,
+                яка взяла все найкраще, і зберегла смак традиційної випічки та
+                натуральність інгредієнтів.
+              </p>
+              <p class="traditions-text limited">
+                Ми працюємо як найвідоміші мережі —
+                <span class="brand"> 5 хвилин і замовлення готове </span>. А ще
+                у наших пекарень стильний дизайн та висока якість
+                обслуговування!
+              </p>
+            </div>
+            <img src="./images/baker-man.jpg" alt="пекарь" />
+          </div>
         </div>
       </section>
       <section class="section" id="chefs-section">
@@ -103,9 +110,9 @@
       <section class="formats-title section" id="formats-section">
         <div class="container">
           <h2 class="section-title">Формати</h2>
-          <ul>
+          <ul class="formats-list">
             <li>
-              <article>
+              <article class="format-card">
                 <h3 class="format-title" lang="en">Walrus</h3>
                 <div class="format-text">
                   <p>Площа: до 120м2.</p>
@@ -119,7 +126,7 @@
               </article>
             </li>
             <li>
-              <article>
+              <article class="format-card">
                 <h3 class="format-title" lang="en">Harseshoe</h3>
                 <div class="format-text">
                   <p>Площа: до 120м2.</p>
@@ -133,7 +140,7 @@
               </article>
             </li>
             <li>
-              <article>
+              <article class="format-card">
                 <h3 class="format-title" lang="en">Handlebar</h3>
                 <div class="format-text">
                   <p>Площа: до 120м2.</p>
