--- a/index.html
+++ b/index.html
@@ -81,12 +81,17 @@
       </section>
       <section class="section" id="chefs-section">
         <div class="container">
-          <h2 class="chefs-title section-title">
-            Найкращі <span class="accent">шеф кухарі</span>
+          <h2 class="chefs-title section-title centered">
+            Наші найкращі <span class="accent">шеф кухарі</span>
           </h2>
           <ul>
             <li>
               <article>
+                <img
+                  class="chef-foto"
+                  src="./images/nastya-chef.jpg"
+                  alt="nastya-chef"
+                />
                 <h3 class="chef-title">Настя</h3>
                 <p>Привіт, я Настя!</p>
                 <p>Вже 10 років, я втілюю у життя цікаві та смачні ідеї.</p>
@@ -95,6 +100,11 @@
             </li>
             <li>
               <article>
+                <img
+                  class="chef-foto"
+                  src="./images/vlad-chef.jpg"
+                  alt="vlad-chef"
+                />
                 <h3 class="chef-title">Влад</h3>
                 <p>Привіт, я Влад!</p>
                 <p>
@@ -109,7 +119,7 @@
       </section>
       <section class="formats-title section" id="formats-section">
         <div class="container">
-          <h2 class="section-title">Формати</h2>
+          <h2 class="section-title centered">Формати</h2>
           <ul class="formats-list">
             <li>
               <article class="format-card">
@@ -175,7 +185,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <nav>
           <a href="#">
