--- a/index.html
+++ b/index.html
@@ -120,6 +120,12 @@
       <section class="formats-title section" id="formats-section">
         <div class="container">
           <h2 class="section-title centered">Формати</h2>
+
+          <button class="carousel-button" type="button">
+            <svg width="32" height="32">
+              <use href="images/icons.svg#icon-arrow"></use>
+            </svg>
+          </button>
           <ul class="formats-list">
             <li>
               <article class="format-card">
@@ -164,6 +170,11 @@
               </article>
             </li>
           </ul>
+          <button class="carousel-button" type="button">
+            <svg width="32" height="32">
+              <use href="images/icons.svg#icon-arrow"></use>
+            </svg>
+          </button>
         </div>
       </section>
       <section class="section" id="contakt-section">
@@ -221,12 +232,16 @@
             </li>
             <li>
               <a href="#">
-                <!-- facebook -->
+                <svg class="address-icon" width="32" height="32">
+                  <use href="images/icons.svg#icon-facebook"></use>
+                </svg>
               </a>
             </li>
             <li>
               <a href="#">
-                <!-- instagram -->
+                <svg class="address-icon" width="32" height="32">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
               </a>
             </li>
           </ul>
