add preprocessor and image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     /> -->
     <!-- styles-->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <header>
@@ -147,6 +147,11 @@
             <ul class="formats-list">
               <li>
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./images/horseshoe-format.jpg"
+                    alt="horseshoe-format"
+                  />
                   <h3 class="format-title" lang="en">Walrus</h3>
                   <div class="format-text">
                     <p>Площа: до 120м2.</p>
@@ -161,6 +166,11 @@
               </li>
               <li>
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./images/handlebar-format.jpg"
+                    alt="handledar-format"
+                  />
                   <h3 class="format-title" lang="en">Harseshoe</h3>
                   <div class="format-text">
                     <p>Площа: до 120м2.</p>
@@ -175,6 +185,11 @@
               </li>
               <li>
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./images/walrus-format.jpg"
+                    alt="walrus-format"
+                  />
                   <h3 class="format-title" lang="en">Handlebar</h3>
                   <div class="format-text">
                     <p>Площа: до 120м2.</p>
@@ -335,7 +350,7 @@
         <button class="modal-btn-close" type="button">Close</button>
         <h2>Замовити дзвінок</h2>
         <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
-        <form name="modal-form" autocomplete="on" novalidate>
+        <form name="modal-form" autocomplete="on">
           <div class="form-field">
             <label class="form-label visually-hidden" for="user-name"
               >Ім'я</label
@@ -346,6 +361,8 @@
               id="user-name"
               name="user-name"
               placeholder="Ім'я"
+              required
+              disabled
             />
           </div>
           <div class="form-field">
@@ -358,6 +375,7 @@
               id="user-tel"
               name="user-tel"
               placeholder="Телефон"
+              required
             />
           </div>
           <div class="form-field">
@@ -370,9 +388,23 @@
               id="user-email"
               name="user-email"
               placeholder="Електронна пошта"
+              required
             />
           </div>
-          <button class="form-button button" type="submit">
+          <!--
+          <div class="checkbox">
+            <input
+              class="checkbox-input visually-hidden"
+              type="checkbox"
+              id="terms-conditions"
+              name="terms-conditions"
+            />
+            <label class="checkbox-label" for="terms-conditions">
+              Я точно погоджуюсь з політекою конфіденційності
+            </label>
+          </div>
+        -->
+          <button class="form-button button" type="submit" disabled>
             Замовити дзвінок
           </button>
           <p class="form-terms">
